--- a/package.json
+++ b/package.json
@@ -4,13 +4,22 @@
   "private": true,
   "dependencies": {
     "axios": "^0.18.0",
+    "crc-32": "^1.2.0",
+    "ethereumjs-util": "^6.0.0",
+    "ethjs": "^0.4.0",
+    "ethjs-util": "^0.1.6",
     "fbemitter": "^2.1.1",
+    "jsrsasign": "^8.0.12",
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
-    "react-scripts": "2.1.1"
+    "react-scripts": "2.1.1",
+    "restify": "^7.2.2",
+    "web3": "^1.0.0-beta.36",
+    "web3-eth": "^1.0.0-beta.36",
+    "web3-eth-personal": "^1.0.0-beta.36"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "HOST=bellance.d react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -23,5 +32,6 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {}
 }
