--- a/package.json
+++ b/package.json
@@ -4,22 +4,26 @@
   "private": true,
   "dependencies": {
     "axios": "^0.18.0",
+    "bootstrap": "^4.1.3",
+    "classnames": "^2.2.6",
     "crc-32": "^1.2.0",
     "ethereumjs-util": "^6.0.0",
     "ethjs": "^0.4.0",
     "ethjs-util": "^0.1.6",
     "fbemitter": "^2.1.1",
     "jsrsasign": "^8.0.12",
+    "popmotion": "^8.5.2",
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
     "react-scripts": "2.1.1",
+    "reactstrap": "^6.5.0",
     "restify": "^7.2.2",
     "web3": "^1.0.0-beta.36",
     "web3-eth": "^1.0.0-beta.36",
     "web3-eth-personal": "^1.0.0-beta.36"
   },
   "scripts": {
-    "start": "HOST=bellance.d react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
